<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CenasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#03A9F4">


        <TextView
            android:id="@+id/textTituloCenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men_cenas"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/textMenuCenas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.245" />

        <TextView
            android:id="@+id/textMenuCenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/tomates_n_variedad_de_tomates_ecol_gicos_con_helado_de_albahaca_n_su_aceite_y_cosas_de_queso_n_n_tartar_de_at_n_rojo_n_at_n_rojo_de_atmella_de_mar_en_tartar_con_soja_s_samo_y_mahonesa_n_de_c_tricos_n_arroz_de_pato_del_delta_n_arroz_cremoso_del_delta_con_pato_de_cuello_verde_y_texturas_n_de_alcachofa_n_pescado_de_lonja_n_seg_n_capturas_ofrecidas_por_servicio_con_doble_de_espinacas_n_a_la_catalan"
            android:textAlignment="center"
            android:textColor="#263238"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextNombreCena"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextNombreCena"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="152dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/nombre"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/confirmar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
