<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".ComidasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/textTituloComidas"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:text="@string/men_comidas"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textMenuComida"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.195" />

        <TextView
            android:id="@+id/textMenuComida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="316dp"
            android:text="@string/huerta_santa_rosalia_n_n_tomate_natural_con_ali_o_de_albahaca_n_esparragos_trigueros_salteados_n_crema_de_calabac_n_n_pastel_de_puerro_con_crujiente_de_espinacas_n_guisantes_l_grima_con_huevo_poch_de_perdiz_n_berenjena_en_escabeche_n_pimientos_asados_n_n_a_la_brasa_o_plancha_n_npicanha_de_wagyu_63_n_sobrecostilla_de_wagyu_63_n_solomillo_de_wagyu_65_n_chulet_n_de_wagyu_800_g_75_n_para_2_personas_n_chulet_n_de_wagyu_1_300_kg_80_pers_n_para_3_personas_n"
            android:textAlignment="center"
            android:textColor="#33691E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/nombre"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMenuComida"
            app:layout_constraintVertical_bias="0.222" />

        <Button
            android:id="@+id/botonConfirmarComida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>